SERVER-39659 Reformat createShardDatabase to return void and call uasserts on all relevant statuses